<resources>
    <string name="app_name">eMedz</string>
    <string name="sign_up">Sign Up </string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_num">Phone</string>
    <string name="name">Name</string>
    <string name="need_account">Don\'t Have an Account?</string>
    <string name="forget_pass">Forgot Password?</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_search_activity">SearchActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="notification">Notification</string>


    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
</resources>
